--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Blog</title>
+    <title>Media</title>
   </head>
   <body>
     <script>
-      let url = "https://threatupdates.github.io/blog/";
+      let url = "https://threatupdates.github.io/media/";
       window.location.href = url;
     </script>
   </body>
